--- a/samples/performance-counters/PerfCounters_4/Sample/Sample.csproj
+++ b/samples/performance-counters/PerfCounters_4/Sample/Sample.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net48</TargetFrameworks>
     <OutputType>Exe</OutputType>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+<!--    <ApplicationManifest>app.manifest</ApplicationManifest>-->
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
