--- a/samples/sqltransport/simple/SqlTransport_6/Receiver/Receiver.csproj
+++ b/samples/sqltransport/simple/SqlTransport_6/Receiver/Receiver.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
     <PackageReference Include="NServiceBus" Version="7.*" />
+    <PackageReference Include="NServiceBus.Metrics.PerformanceCounters" Version="4.0.0" />
     <PackageReference Include="NServiceBus.Transport.SqlServer" Version="6.*" />
   </ItemGroup>
 </Project>
