Targeting version 6-* of System.Diagnostics.PerformanceCounter as the indirect dependency

--- a/samples/performance-counters/PerfCounters_4/Sample/Sample.csproj
+++ b/samples/performance-counters/PerfCounters_4/Sample/Sample.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="NServiceBus.Metrics.PerformanceCounters" Version="4.*" />
     <PackageReference Include="NServiceBus" Version="7.*" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="6-*" />
   </ItemGroup>
 </Project>
