--- a/samples/sqltransport/simple/SqlTransport_6/Sender/Sender.csproj
+++ b/samples/sqltransport/simple/SqlTransport_6/Sender/Sender.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="NServiceBus" Version="7.*" />
     <PackageReference Include="NServiceBus.Metrics.PerformanceCounters" Version="4.0.0" />
     <PackageReference Include="NServiceBus.Transport.SqlServer" Version="6.*" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="6-*" />
   </ItemGroup>
 </Project>
