--- a/samples/platformtools-docker-compose/ServiceControl_4/docker-compose.init.yml
+++ b/samples/platformtools-docker-compose/ServiceControl_4/docker-compose.init.yml
@@ -8,17 +8,18 @@ volumes:
 services:
 
   error:
-    image: particular/servicecontrol.azureservicebus.init-windows:4
+    image: particular/servicecontrol.azureservicebus.init-windows:latest
     ports:
       - 33333:33333
     volumes:
       - error:c:/data
       - ${PROGRAMDATA}/ParticularSoftware:C:/ProgramData/ParticularSoftware
     env_file: .env
+    mem_limit: 8192m
 
 
   monitoring:
-    image: particular/servicecontrol.azureservicebus.monitoring.init-windows:4
+    image: particular/servicecontrol.azureservicebus.monitoring.init-windows:latest
     ports:
       - 33633:33633
     volumes:
@@ -27,10 +28,11 @@ services:
 
 
   audit:
-    image: particular/servicecontrol.azureservicebus.audit.init-windows:4
+    image: particular/servicecontrol.azureservicebus.audit.init-windows:latest
     ports:
       - 44444:44444
     volumes:
       - audit:c:/data
       - ${PROGRAMDATA}/ParticularSoftware:C:/ProgramData/ParticularSoftware
     env_file: .env
+    mem_limit: 8192m
