--- a/samples/platformtools-docker-compose/ServiceControl_4/docker-compose.maintenance.yml
+++ b/samples/platformtools-docker-compose/ServiceControl_4/docker-compose.maintenance.yml
@@ -11,38 +11,33 @@ services:
     image: particular/servicecontrol.azureservicebus-windows:latest
     ports:
       - 33333:33333
-
+      - 33334:33334
     volumes:
       - error:c:/data
       - ${PROGRAMDATA}/ParticularSoftware:C:/ProgramData/ParticularSoftware
     env_file: .env
     mem_limit: 8192m
     restart: unless-stopped
+    command: --maintenance --portable
 
 
-  monitoring:
-    image: particular/servicecontrol.azureservicebus.monitoring-windows:latest
-    ports:
-      - 33633:33633
-    volumes:
-      - ${PROGRAMDATA}/ParticularSoftware:C:/ProgramData/ParticularSoftware
-    env_file: .env
-    restart: unless-stopped
+
+
+
+
+
+
+
 
   audit:
     image: particular/servicecontrol.azureservicebus.audit-windows:latest
     ports:
       - 44444:44444
-
+      - 44445:44445
     volumes:
       - audit:c:/data
       - ${PROGRAMDATA}/ParticularSoftware:C:/ProgramData/ParticularSoftware
     env_file: .env
     mem_limit: 8192m
     restart: unless-stopped
-
-  pulse:
-    image: particular/servicepulse-windows:1
-    ports:
-      - 9090:80
-    restart: unless-stopped
+    command: --maintenance --portable
