--- a/samples/sqltransport/simple/SqlTransport_7/Shared/Shared.csproj
+++ b/samples/sqltransport/simple/SqlTransport_7/Shared/Shared.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NServiceBus" Version="[8.0.0-alpha.819, 9.0.0)" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.*" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.3" />
   </ItemGroup>
 </Project>
